<resources>
    <string name="app_name">DataHajiUmroh</string>
    <string name="keutamaan">Keutamaan Haji</string>
    <string name="desc0">Terdapat dalam Al-Qur\'an, sebagai berikut :</string>
    <string name="desc1">Terdapat dalam Al-Qur\'an dan Hadits, sebagai berikut :</string>
    <string name="desc2">Terdapat dalam Hadits, sebagai berikut :</string>
    <string name="desc3">di shahihkan oleh Al-Albani dalam</string>
    <string name="desc4">di nyatakan oleh Syaikh Al-Albani</string>
    <string name="desc5">di hasankan oleh Al-Albani dalam</string>
    <string name="desc6">Artinya</string>
    <string name="next">BERIKUTNYA</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="_1_rukun_islam_yg_kelima">1. Rukun Islam yang Kelima</string>
    <string name="aliimran97">وَلِلَّهِ عَلَى النَّاسِ حِجُّ الْبَيْتِ مَنِ اسْتَطَاعَ إِلَيْهِ سَبِيلًا
    \n\n
    “Mengerjakan haji adalah kewajiban manusia terhadap Allah, yaitu bagi yang sanggup mengadakan perjalanan ke baitullah” (QS Ali-Imran 97).</string>
    <string name="qs_ali_imran_97">QS. Ali-Imran : 97</string>
    <string name="hr_bukhari8_muslim16">HR Al-Bukhari no 8 dan Muslim no 16</string>
    <string name="nr_bukharimuslim816">بُنِيَ الإِسْلاَمُ عَلَى خَمْسٍ: شَهَادَةِ أَنْ لاَ إِلَهَ إِلَّا اللَّهُ وَأَنَّ مُحَمَّدًا رَسُولُ اللَّهِ، وَإِقَامِ الصَّلاَةِ، وَإِيتَاءِ الزَّكَاةِ، وَالحَجِّ، وَصَوْمِ رَمَضَانَ
    \n\n
    “Islam dibangun di atas 5 rukun, syahadatain, menegakan sholat, menunaikan zakat, berhaji, dan berpuasa di bulan Ramadhan” (Hadits Riwayat Al-Bukhari no 8 dan Muslim no 16).</string>
    <string name="_2_mendapatkan_surga">2. Mendapatkan Surga</string>
    <string name="hr_bukhari1773_muslim1349">HR Al-Bukhari 1773 dan Muslim no 1349 dan Abu Hurairah r.a</string>
    <string name="hr_bukharimuslim1749">الْعُمْرَةُ إِلَى الْعُمْرَةِ كَفَّارَةٌ لِمَا بَيْنَهُمَا، وَالْحَجُّ الْمَبْرُورُ لَيْسَ لَهُ جَزَاءٌ إِلاَّ الْجَنَّةُ
    \n\n
    “Sesungguhnya umrah yang satu hingga umrah yang berikutnya merupakan penebus dosa-dosa yang ada diantara kedua umrah tersebut, dan haji yang mabrūr tidak ada balasan baginya yang setimpal kecuali surga.” (Hadits Riwayat Al-Bukhari no 1773 dan Muslim no 1349 dari hadits Abu Hurairah r.a).</string>
    <string name="_3_menghilangkan_dosa">3. Menghilangkan Dosa &amp; Kemiskinan</string>
    <string name="hr_tirmidzi_annasai1200">HR Tirmidzi dan An-Nasa\'i</string>
    <string name="hr_tirmidziannasai1200">تَابِعُوا بَيْنَ الْحَجِّ وَالْعُمْرَةِ فَإِنَّهُمَا يَنْفِيَانِ الْفَقْرَ وَالذُّنُوبَ كَمَا يَنْفِي الْكِيرُ خَبَثَ الْحَدِيدِ وَالذَّهَبِ وَالْفِضَّةِ وَلَيْسَ لِلْحَجَّةِ الْمَبْرُورَةِ ثَوَابٌ إِلَّا الْجَنَّةَ
    \n\n
    “Tunaikanlah haji dan umrah secara silih berganti, karena haji dan umrah itu bisa menghilangkan kefakiran dan juga bisa menghilangkan dosa-dosa sebagaimana alat tiup pandai besi untuk menghilangkan kotoran besi/karat besi, emas, dan perak” (Hadits Riwayat Tirmidzi dan An Nasai, dan dishahihkan oleh Al-Albani dalam As-Shahihah No. 1200)</string>
    <string name="assahihah1200">As-Shahihah no 1200</string>
    <string name="_4_haji_merupakan_jihad">4. Haji Merupakan Jihad Bagi Wanita</string>
    <string name="hr_bukhari_1520">HR Al-Bukhari no 1520</string>
    <string name="hr_bukhari1520">يَا رَسُولَ اللَّهِ، نَرَى الجِهَادَ أَفْضَلَ العَمَلِ، أَفَلاَ نُجَاهِدُ؟ قَالَ: «لاَ، لَكُنَّ أَفْضَلُ الجِهَادِ حَجٌّ مَبْرُورٌ
    \n\n
    “Wahai Rasulullah, kami (para wanita) melihat bahwasanya jihad merupakan amal yang terbaik, apakah kita (kami para wanita) tidak berjihad?”. Jawab Nabi shallallahu ‘alayhi wa sallam: “Laa (tidak), bagi kalian (para wanita) ada jihad yang terbaik yaitu haji mabrur.” (HR Al-Bukhari no 1520, Sebagian Ulama Memberi Harokat Sebagai Berikut : لَكِنَّ أَفْضَلَ الجِهَادِ حَجٌّ مَبْرُورٌ Sehingga Artinya : “Akan Tetapi Jihad yang Paling Afdol Adalah Haji Mabrur”, dan Ini Semakin Menunjukkan Keutamaan Haji Mabrur Sehingga Mencakup Wanita dan Lelaki).</string>
    <string name="hr_ibnumajah_2901">HR Ibnu Majah no 2901</string>
    <string name="hr_ibnumajah2901">قُلْتُ: يَا رَسُولَ اللَّهِ عَلَى النِّسَاءِ جِهَادٌ؟ قَالَ: ” نَعَمْ عَلَيْهِنَّ جِهَادٌ لَا قِتَالَ فِيهِ: الْحَجُّ وَالْعُمْرَةُ
    \n\n
    “Aku bertanya wahai Rasūlullāh, apakah wajib bagi para wanita untuk berjihād?”, Kata Rasūlullāh shallallāhu ‘alayhi wa sallam: “Iya, wajib bagi kalian untuk berjihād yang tidak ada peperangan di dalamnya (yaitu) haji dan umrah.” (HR Ibnu Maajah no 2901).</string>
    <string name="alirwaa_981">Al-Irwaa no 981</string>
    <string name="alirwaa981">Jadi gan ini tuh diskip gra2 aku ga nemu hadis nya maap</string>
    <string name="_5_bagi_laki_haji">5. Bagi Laki-laki Haji Mabrur Merupakan Amalan Terbaik Setelah Jihad</string>
    <string name="hr_bukhari26_muslim135">HR Al-Bukhari no 26 dan Muslim no 135</string>
    <string name="hr_bukharimuslim2635">أَنَّ رَسُولَ اللَّهِ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ سُئِلَ: أَيُّ العَمَلِ أَفْضَلُ؟ فَقَالَ: «إِيمَانٌ بِاللَّهِ وَرَسُولِهِ». قِيلَ: ثُمَّ مَاذَا؟ قَالَ: «الجِهَادُ فِي سَبِيلِ اللَّهِ» قِيلَ: ثُمَّ مَاذَا؟ قَالَ: «حَجٌّ مَبْرُورٌ»
    \n\n
    Bahwasanya Rasulullah shallallahu ‘alayhi wa sallam pernah ditanya tentang amal apa yang paling afdal. Kata Rasulullah shallallahu ‘alayhi wa sallam, “Iman kepada Allah dan Rasul-Nya.”. Kemudian beliau ditanyakan lagi, “Kemudian amal apalagi yang afdal setelah itu?”. Beliau menjawab, “(Yaitu) jihad di jalan Allāh Subhānahu wa Ta’āla.”, Kemudian ditanyakan lagi, “Lalu amalan apa lagi yang paling afdal setelah itu?”, Rasulullah shallallahu ‘alayhi wa sallam berkata, “Haji yang mabrur.” (HR Al-Bukhari no 26 dan Muslim no 135).</string>
    <string name="_6_menghapus_seluruh_dosa">6. Menghapus Seluruh Dosa</string>
    <string name="hr_bukhari1521_muslim1350">HR Bukhari no 1521 dan Muslim no 1350</string>
    <string name="hr_bukharimuslim1550">«مَنْ حَجَّ لِلَّهِ فَلَمْ يَرْفُثْ، وَلَمْ يَفْسُقْ، رَجَعَ كَيَوْمِ وَلَدَتْهُ أُمُّهُ»
    \n\n
    “Barangsiapa yang berhaji karena Allah dan dia tidak melakukan rafats dan tidak melakukan kemaksiatan maka dia akan kembali sebagaimana hari dia dilahirkan dari perut ibunya.” (HR Al-Bukhari No. 1521 dan Muslim No. 1350).</string>
    <string name="_7_pahala_berlimpah_ruah">7. Pahala Berlimpah Ruah</string>
    <string name="shahih_ibnukhuzaimah_1984">Shahih Ibnu Khuzaimah no 1984</string>
    <string name="hadits_shahih_ibnukhuzaimah1984">فَإِنَّ لَهُ حِينَ يَخْرُجُ مِنْ بَيْتِهِ أَنَّ رَاحِلَتَهُ لَا تَخْطُو خُطْوَةً إِلَّا كُتِبَ لَهُ بِهَا حَسَنَةٌ أَوْ حُطَّت عَنْهُ بِهَا خَطِيئَةٌ فَإِذَا وَقَفَ بِعَرَفَةَ فَإِنَّ اللَّهَ عَزَّ وَجَلَّ يَنْزِلُ إِلَى السَّمَاءِ الدُّنْيَا فَيَقُولُ: انْظُرُوا إِلَى عِبَادِي شُعثاً غُبراً اشْهَدُوا أَنِّي قَدْ غَفَرْتُ لَهُمْ ذُنُوبَهُمْ وَإِنْ كَانَ عَدَدَ قَطْرِ السَّمَاءِ وَرَمْلِ عالجٍ وَإِذَا رَمَى الْجِمَارَ لَا يَدْرِي أَحَدٌ مَا لَهُ حَتَّى يُوَفَّاهُ يَوْمَ الْقِيَامَةِ وَإِذَا حَلَقَ رَأْسَهُ فَلَهُ بِكُلِّ شَعْرَةٍ سَقَطَتْ مِنْ رَأْسِهِ نُورٌ يَوْمَ الْقِيَامَةِ وَإِذَا قَضَى آخِرَ طَوَافِهِ بِالْبَيْتِ خَرَجَ مِنْ ذُنُوبِهِ كَيَوْمِ وَلَدَتْهُ أمه</string>
    <string name="arti_shahih_ibnukhuzaimah1984">“Sesungguhnya baginya semenjak ia (seorang yg berhaji) keluar dari rumahnya, bahwasanya tidaklah hewan tunggangannya melangkahkan kakinya selangkah kecuali dicatat baginya sebuah kebaikan atau dihapuskan baginya satu keburukan.
        \n
        Jika ia wuquf di Arofah maka Allah turun ke langit dunia lalu Allah berkata : Lihatlah hamba-hambaKu datang memenuhi panggilanKu dalam kondisi rambut semerawut dan penuh dengan debu, maka saksikanlah (wahai para malaikat) sesungguhnya aku telah mengampuni dosa-dosa mereka meskipun sebanyak butiran-butiran air hujan, meskipun sebanyak butiran-butiran pasir yang menjulang.
        \n
        Jika ia melempar jamarot maka ia tidak tahu apa ganjaran yang akan ia peroleh hingga Allah akan memenuhi ganjarannya pada hari kiamat.
        \n
        Jika ia menggundul kepalanya maka setiap helai rambut yang jatuh dari kepalanya akan menjadi cahaya baginya pada hari kiamat.
        \n
        Jika ia telah selesai dari putaran towafnya yang terakhir maka ia keluar dari dosa-dosanya sebagaimana hari ia dilahirkan oleh ibunya” (Shahih Ibni Khuzaimah no 1984, dinyatakan oleh Syaikh Al-Albani : Hasan Lighairihi).</string>
    <string name="hasan_lighairihi">Hasan Lighairihi</string>
    <string name="jamaah_haji">Jamaah Haji Tamu Allah</string>
    <string name="qs_al_hajj_27">QS. Al-Hajj : 27</string>
    <string name="alhajj27">وَأَذِّنْ فِي النَّاسِ بِالْحَجِّ يَأْتُوكَ رِجَالًا وَعَلَىٰ كُلِّ ضَامِرٍ يَأْتِينَ مِنْ كُلِّ فَجٍّ عَمِيقٍ
    \n\n
    “Dan berserulah kepada manusia untuk mengerjakan haji, niscaya mereka akan datang kepadamu dengan berjalan kaki dan mengendarai unta, yang datang dari segenap penjuru yang jauh.” (QS. Al-Hajj : 27).</string>
    <string name="hr_ibnumajah_2884">HR Ibnu Majah no 2884</string>
    <string name="hr_ibnumajah2884">الحُجَّاجُ وَالْعُمَّارُ وَفْدُ اللهِ، دَعَاهُمْ فَأَجَابُوْهُ، سَأَلُوْهُ فَأَعْطَاهُمْ
    \n\n
    “Sesungguhnya para jama’ah haji dan para jama’ah umrah adalah tamu Allāh, Allāh telah panggil mereka dan mereka pun memenuhi panggilan Allāh. Lantas setelah merekapun setelah memenuhi panggilan Allāh (sebagai tamu-tamu Allāh), lantas mereka memohon kepada Allāh, maka Allāh pun mengabulkan permohonan mereka.” (HR Ibnu Majah nomor 2884).</string>
    <string name="assahihah1820">Assahihah 1820</string>
    <string name="hr_bukhari_1593">HR Bukhari no 1593</string>
    <string name="hr_bukhari1593">لَيُحَجَّنَّ البَيْتُ وَلَيُعْتَمَرَنَّ بَعْدَ خُرُوجِ يَأْجُوجَ وَمَأْجُو
    \n\n
    “Sungguh bahwasanya Ka’bah ini, orang akan datang berhaji kepadanya, dan orang-orang akan berumrah kepada Ka’bah, meskipun setelah keluarnya Ya’juj dan Ma’juj.” (HR Al-Bukhari No. 1593).</string>
    <string name="segera_mendapat_predikat">Segera Mendapat Predikat \'Tamu Allah\'</string>
    <string name="hr_ibnumajah_2874">HR Ibnu Majah no 2874</string>
    <string name="hr_ibnumajah2874">مَنْ أَرَادَ الْحَجَّ فَلْيَتَعَجَّلْ فَإِنَّهُ قَدْ يَمْرَضُ الْمَرِيْضُ وَتَضِلُّ الضَالَّةُ وَتَعْرِضُ الْحَاجَةُ
    \n\n
    “Barangsiapa ingin berhaji maka bersegeralah, karena sesungguhnya bisa jadi seorang itu sakit, bisa jadi tunggangannya yang dia gunakan untuk berhaji ternyata hilang (tidak bisa dia gunakan lagi artinya ada halangan), bisa jadi ada kebutuhan yang datang (sehingga dia tidak bisa berhaji).” (HR Ibnu Majah No. 2874 dan dishahihkan oleh Al-Albani namun dilemahkan oleh sebagian ulama).</string>
    <string name="dilemahkan_ulama">dishahihkan Al–Albani Tetapi Dilemahkan Beberapa Ulama</string>
    <string name="bersabar">Bersabar</string>
    <string name="hr_bukhari1787_muslim1211">HR Bukhari no 1787 dan 1211</string>
    <string name="hr_bukharimuslim_1711">ولَكِنَّهَا عَلَى قَدْرِ نَفَقَتِكِ أوْ نَصَبكِ
    \n\n
    “Akan tetapi ganjarannya itu berdasarkan ukuran nafkahmu atau keletihanmu” (HR Al-Bukhari no 1787 dan Muslim no 1211).</string>
    <string name="hr_baihaqi_8643">HR Al-Baihaqi dalam As-Sunan Al-Kubro no 8643</string>
    <string name="hr_baihaqi8643">وَلَكِنَّهُ عَلَى قَدْرِ عَنَائِكِ وَنَصَبِكِ
    \n\n
    “Akan tetapi pahalanya sesuai kadar kesulitanmu dan keletihanmu” (HR Al-Baihaqi dalam As-Sunan Al-Kubro no 8643)</string>
    <string name="ikhlas_dalam_haji">Ikhlas Dalam Haji</string>
    <string name="dishahihkan_al_albani_2617">Dishahihkan oleh Al-Albani dalam As-Shahihah no 2617</string>
    <string name="hakikat_talbiyah">Hakikat Talbiyah</string>
    <string name="hr_muslim_1247">HR Muslim no 1247</string>
    <string name="hr_thabrani_1621">HR Thabrani</string>
    <string name="assahihah_1621">As-Shahihah no 1621</string>
</resources>