<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keutamaan"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_rukun_islam_yg_kelima"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc1"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/aliimran97"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qs_ali_imran_97"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="15dp"
            android:textSize="11sp"
            android:background="@drawable/custom1"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/Platform.MaterialComponents"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bukharimuslim816"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_bukhari8_muslim16"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom2"
                android:textSize="11sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/Platform.MaterialComponents"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_mendapatkan_surga"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/bukharimuslim1749"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_bukhari1773_muslim1349"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:background="@drawable/custom3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
