<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hakikat_talbiyah"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/muslim1247"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_muslim_1247"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:background="@drawable/custom6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="11sp"
            android:textAppearance="@style/Platform.MaterialComponents"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/thabrani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_thabrani_1621"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom2"
                android:textSize="11sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/Platform.MaterialComponents"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="11dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/assahihah1621"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/assahihah_1621"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
