<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_menghilangkan_dosa"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/tirmidziannasai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tirmidzi_annasai1200"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:background="@drawable/custom4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="11dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/assahihah1200"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/assahihah1200"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="1dp"
                android:padding="5dp"
                android:background="@drawable/custom5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_haji_merupakan_jihad"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/bukhari1520"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_bukhari_1520"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="15dp"
            android:textSize="11sp"
            android:background="@drawable/custom4"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/Platform.MaterialComponents"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ibnumajah2901"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_ibnumajah_2901"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="11dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/alirwaa981"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alirwaa_981"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
