<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/jamaah_haji"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/desc1"
            android:textSize="12sp" />

        <Button
            android:id="@+id/alhajj27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom1"
            android:text="@string/qs_al_hajj_27"
            android:textAppearance="@style/Platform.MaterialComponents"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ibnumajah2884"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_ibnumajah_2884"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom2"
                android:textSize="11sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/Platform.MaterialComponents"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/desc5"
                android:textSize="11sp" />

            <Button
                android:id="@+id/assahihah1820"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom3"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:text="@string/assahihah1820"
                android:textSize="11sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/Platform.MaterialComponents"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bukhari1593"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_bukhari_1593"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom5"
                android:textSize="11sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/Platform.MaterialComponents"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
